codex-rs/tui/src/app/snapshots/codex_tui__app__agents_overview__tests__command_center__live_center_columns_arrow_filters.snap
---
source: tui/src/app/agent_center_tests.rs
expression: "screen(&view, 160, 22)"
---
  Agent command center  Group: Project  g
   All 6   Needs you 2   Working 1   Ready 2   Inactive 1                                                                                           ←/→ filter
  ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
      Tasks                                                                                   Status         Updated  │ Task details
  Pinned  2                                                                                                           │
  › ○ Current task                                                                            Ready              now  │ Current task
    ● Needs an answer                                                                         Needs input     2h ago  │ ○ Ready
                                                                                                                      │
  /tmp/project  4                                                                                                     │ Model: Unknown
    ○ A longer task title that uses the available column                              voice   Ready           5m ago  │ Reasoning: Unknown
    ! Failed task                                                                             Error           1h ago  │
    ● Working task                                                                            Working         1d ago  │ Project
    ○ Unloaded task                                                                           Inactive        2d ago  │ /tmp/project
                                                                                                                      │
                                                                                                                      │ Prompt
                                                                                                                      │ Current task
                                                                                                                      │
                                                                                                                      │
                                                                                                                      │
                                                                                                                      │
                                                                                                                      │
  ? help  esc back  ↑/↓ move  enter open  n new
