codex-rs/tui/src/app/snapshots/codex_tui__app__agents_overview__tests__command_center__live_center_help_three_columns_arrow_filters.snap
---
source: tui/src/app/agent_center_tests.rs
expression: "screen(&view, width, height)"
---
  Agent command center  Group: Project  g
   All 3   Needs you 1   Working 0   Ready 1   Inactive 1                               ←/→ filter
  ────────────────────────────────────────────────────────────────────────────────────────────────
  Task shortcuts

  Navigate            Tasks                      View
  ↑      Up           n          New             ←/→  Filter
  ↓      Down         w          New worktree    f3   Search
  enter  Open         o          Resume          g    Group
  pgup   Page up      f          Fork
  pgdn   Page down    r          Rename
  ⌃c     Quit         x          Stop
                      a          Archive
                      h          Hide
                      backspace  Delete








  esc back
