codex-rs/tui/src/app/snapshots/codex_tui__app__agents_overview__tests__command_center__live_center_show_more_search_retry.snap
---
source: tui/src/app/agent_center_tests.rs
assertion_line: 896
expression: "screen(&view, 80, 12)"
---
  Agent command center  Group: Project  g
   My agents 0   Needs you 0   Working 0   Ready 0   All 1
  ────────────────────────────────────────────────────────────────────────────
  Search › Older task
      Tasks                                            Status         Updated

  ›   Show more (retry)




  Error loading tasks
